# rose_moveit_controller

./: CMakeLists.txt  README.md  package.xml
action/: arm_goal.action
src/: moveit_controller.cpp
